--- a/midwest/css/style.css
+++ b/midwest/css/style.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'BDO Grotesk';
-    src: url('BDOGrotesk-Bold.woff2') format('woff2'),
-        url('BDOGrotesk-Bold.woff') format('woff');
+    src: url('../fonts/BDOGrotesk-Bold.woff2') format('woff2'),
+        url('../fonts/BDOGrotesk-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -9,8 +9,8 @@
 
 @font-face {
     font-family: 'BDO Grotesk';
-    src: url('BDOGrotesk-Black.woff2') format('woff2'),
-        url('BDOGrotesk-Black.woff') format('woff');
+    src: url('../fonts/BDOGrotesk-Black.woff2') format('woff2'),
+        url('../fonts/BDOGrotesk-Black.woff') format('woff');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
@@ -18,8 +18,8 @@
 
 @font-face {
     font-family: 'BDO Grotesk';
-    src: url('BDOGrotesk-Black.woff2') format('woff2'),
-        url('BDOGrotesk-Black.woff') format('woff');
+    src: url('../fonts/BDOGrotesk-Black.woff2') format('woff2'),
+        url('../fonts/BDOGrotesk-Black.woff') format('woff');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
@@ -27,8 +27,8 @@
 
 @font-face {
     font-family: 'BDO Grotesk';
-    src: url('BDOGrotesk-DemiBold.woff2') format('woff2'),
-        url('BDOGrotesk-DemiBold.woff') format('woff');
+    src: url('../fonts/BDOGrotesk-DemiBold.woff2') format('woff2'),
+        url('../fonts/BDOGrotesk-DemiBold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -36,8 +36,8 @@
 
 @font-face {
     font-family: 'BDO Grotesk';
-    src: url('BDOGrotesk-Light.woff2') format('woff2'),
-        url('BDOGrotesk-Light.woff') format('woff');
+    src: url('../fonts/BDOGrotesk-Light.woff2') format('woff2'),
+        url('../fonts/BDOGrotesk-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -45,8 +45,8 @@
 
 @font-face {
     font-family: 'BDO Grotesk';
-    src: url('BDOGrotesk-DemiBold.woff2') format('woff2'),
-        url('BDOGrotesk-DemiBold.woff') format('woff');
+    src: url('../fonts/BDOGrotesk-DemiBold.woff2') format('woff2'),
+        url('../fonts/BDOGrotesk-DemiBold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -54,8 +54,8 @@
 
 @font-face {
     font-family: 'BDO Grotesk';
-    src: url('BDOGrotesk-ExtraBold.woff2') format('woff2'),
-        url('BDOGrotesk-ExtraBold.woff') format('woff');
+    src: url('../fonts/BDOGrotesk-ExtraBold.woff2') format('woff2'),
+        url('../fonts/BDOGrotesk-ExtraBold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -63,8 +63,8 @@
 
 @font-face {
     font-family: 'BDO Grotesk';
-    src: url('BDOGrotesk-ExtraBold.woff2') format('woff2'),
-        url('BDOGrotesk-ExtraBold.woff') format('woff');
+    src: url('../fonts/BDOGrotesk-ExtraBold.woff2') format('woff2'),
+        url('../fonts/BDOGrotesk-ExtraBold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -72,8 +72,8 @@
 
 @font-face {
     font-family: 'BDO Grotesk';
-    src: url('BDOGrotesk-Bold.woff2') format('woff2'),
-        url('BDOGrotesk-Bold.woff') format('woff');
+    src: url('../fonts/BDOGrotesk-Bold.woff2') format('woff2'),
+        url('../fonts/BDOGrotesk-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -81,8 +81,8 @@
 
 @font-face {
     font-family: 'BDO Grotesk';
-    src: url('BDOGrotesk-Medium.woff2') format('woff2'),
-        url('BDOGrotesk-Medium.woff') format('woff');
+    src: url('../fonts/BDOGrotesk-Medium.woff2') format('woff2'),
+        url('../fonts/BDOGrotesk-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -90,35 +90,8 @@
 
 @font-face {
     font-family: 'BDO Grotesk';
-    src: url('BDOGrotesk-Light.woff2') format('woff2'),
-        url('BDOGrotesk-Light.woff') format('woff');
-    font-weight: 300;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'BDO Grotesk';
-    src: url('BDOGrotesk-Regular.woff2') format('woff2'),
-        url('BDOGrotesk-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'BDO Grotesk';
-    src: url('BDOGrotesk-Regular.woff2') format('woff2'),
-        url('BDOGrotesk-Regular.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'BDO Grotesk';
-    src: url('BDOGrotesk-Medium.woff2') format('woff2'),
-        url('BDOGrotesk-Medium.woff') format('woff');
+    src: url('../fonts/BDOGrotesk-Medium.woff2') format('woff2'),
+        url('../fonts/BDOGrotesk-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -126,8 +99,35 @@
 
 @font-face {
     font-family: 'BDO Grotesk';
-    src: url('BDOGrotesk-Regular.woff2') format('woff2'),
-        url('BDOGrotesk-Regular.woff') format('woff');
+    src: url('../fonts/BDOGrotesk-Regular.woff2') format('woff2'),
+        url('../fonts/BDOGrotesk-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'BDO Grotesk';
+    src: url('../fonts/BDOGrotesk-Regular.woff2') format('woff2'),
+        url('../fonts/BDOGrotesk-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'BDO Grotesk';
+    src: url('../fonts/BDOGrotesk-Medium.woff2') format('woff2'),
+        url('../fonts/BDOGrotesk-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'BDO Grotesk';
+    src: url('../fonts/BDOGrotesk-Regular.woff2') format('woff2'),
+        url('../fonts/BDOGrotesk-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -174,6 +174,16 @@ a {
     color: #f8ae1d;
 }
 
+.btn {
+    /* border: 2px solid transparent; */
+    border-radius: 50px;
+    display: inline-block;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 11px 38px;
+    transition: .2s 
+ease-in-out;
+}
 
 
 /* navbar start */
@@ -212,11 +222,9 @@ header {
 
 .nav-links {
     list-style: none;
-    display: flex;
     align-items: center;
     position: relative;
     font-size: 20px;
-    gap: 20px;
     margin:0px;
     padding:0px;
 }
@@ -224,6 +232,8 @@ header {
 .menu-icon {
     display: flex;
     gap: 20px;
+    position: absolute;
+    right: 20px;
 }
 
 img.arrow-icon\> {
@@ -237,6 +247,14 @@ img.arrow-icon {
     left: 12px;
 }
 
+img.call-img {
+    position: absolute;
+    top: 26px;
+    left: 22px;
+    color: #fcfcfc;
+    background-color: azure;
+}
+
 .cta {
     list-style: none;
     display: flex;
@@ -244,25 +262,56 @@ img.arrow-icon {
     position: relative;
     font-size: 20px;
     gap: 20px;
+    line-height: 1.55;
 }
 
-.list {
-    display: inline-block;
-    padding: 25px .875rem;
-}
-
-.list-item {
-    text-decoration: none;
-    color: white;
-}
-
-.list-item.item {
+.call {
     border: 1.5px solid #f8ae1d;
     border-radius: 50px;
     display: inline-block;
     font-size: 18px;
     padding: 12px 21px;
-    font-weight: 700;
+}
+
+.call:hover {
+    background-color: #fff;
+    border-color: #fff;
+    color: #000;
+}
+
+.call-icon svg {
+    height: 22px;
+    margin-right: 11px;
+    vertical-align: middle;
+    width: 22px;
+}
+
+.call:hover span.hero-num {
+    color: #000000;
+}
+
+.call:hover svg path {
+    fill: black;
+}
+
+.hero-num {
+    color: white;
+}
+
+.list {
+    display: inline-block;
+    padding: 25px .875rem;
+    margin: 0px 13.1125px 0px 0px;
+}
+
+.list-item {
+    text-decoration: none;
+    color: white;
+
+}
+
+.list-item:hover {
+    color: #f8ae1d;
 }
 
 .list-item.item:hover {
@@ -272,14 +321,15 @@ img.arrow-icon {
 }
 
 .list-item.items {
-    background-color: #f8ae1d;
-    border: 15px solid #c6767600;
+   background-color: #f8ae1d;
     border-radius: 50px;
     color: #1b1b17;
     display: inline-block;
     font-size: 18px;
-    padding: 0px 21px;
+    padding: 11px 38px;
     font-weight: 700;
+    width: 184px;
+    height: 53px;
 }
 
 .list-item.items:hover {
@@ -299,12 +349,12 @@ img.arrow-icon {
     line-height: 1.2;
     font-size: 70px;
     margin: 0px 0px;
-    padding: 0 0 24px;
+    margin: 0 0 22.4px;
     max-width: 754px;
 }
 
 .hero-subheading {
-    font-size: 21px;
+    font-size: 20px;
     line-height: 1.55;
     font-weight: 600;
 }
@@ -344,15 +394,20 @@ img.arrow-icon {
 }
 
 .btn-primary {
+    font-weight: 700;
+    justify-content: center;
+    min-width: 268px;
+    padding: 15px 38px;
+}
+
+.btn-primary {
     color: #1b1b17;
     background-color: #f8ae1d;
     border: 2px solid #00000000;
     border-radius: 50px;
     display: flex;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 700;
-    padding: 11px 57px 11px 38px;
-    align-items: center;
     position: relative;
 }
 
@@ -368,7 +423,7 @@ img.arrow-icon {
     border: 2px solid #f8ae1d;
     border-radius: 50px;
     display: flex;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 700;
     padding: 15px 55px 15px 38px;
     align-items: center;
@@ -392,7 +447,7 @@ img.arrow-icon {
     justify-content: space-between;
     margin-top: 160px;
     overflow: hidden;
-    padding: 50px;
+    padding: 30px;
 }
 
 .hero-img {
@@ -404,20 +459,15 @@ img.arrow-icon {
 
 .hero-para {
     color: #fff;
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.3;
     max-width: 326px;
     width: 80%;
+    margin: 0px
 }
 
 .arrow-span {
-    /* position: absolute;
-    background-color: #fff;
-    border-radius: 50%;
-    box-shadow: inset 0 0 8px 0 rgba(0, 0, 0, .25);
-    height: 50px;
-    width: 50px; */
-    background-color: #fff;
+        background-color: #fff;
     border-radius: 50%;
     box-shadow: inset 0 0 8px 0 rgba(0, 0, 0, .25);
     height: 50px;
@@ -425,6 +475,11 @@ img.arrow-icon {
     position: absolute;
     right: 1px;
     width: 50px;
+    bottom: 2px;
+}
+
+.arrow-span:hover {
+    background-color: #f8ae1d;
 }
 
 /* hero section end */
@@ -458,9 +513,16 @@ img.arrow-icon {
 }
 
 .textile-description {
-    font-size: 16px;
+    font-size: 14px;
     color: rgba(51, 51, 51, .6);
     max-width: 367px;
+}
+
+.textile-para {
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .container.textile-container {
@@ -502,7 +564,13 @@ img.arrow-icon {
 
 .hero-icon p {
     margin: 20px 0 0;
-    font-size: 18px;
+    font-size: 14px;
+}
+
+img.hero-iconimg {
+    margin: 0 0 4px;
+    width: 89px;
+    height: 46px;
 }
 
 
@@ -524,8 +592,9 @@ img.arrow-icon {
 .num-image {
     position: relative;
     left: 120px;
-    height: 200px;
+    height: 175px;
     top: 20px;
+    margin: 13.3px 0;
 }
 
 section.manufacturing {
@@ -576,7 +645,8 @@ section.manufacturing {
 
 .rings {
     font-size: 43.647px;
-    font-weight: 100;
+    font-weight: 400;
+    line-height: 1;
 }
 
 .pera {
@@ -601,7 +671,6 @@ section.manufacturing {
 
 .card-para {
     font-size: 20px;
-    color: #666;
     margin: 0;
 }
 
@@ -640,18 +709,21 @@ section.manufacturing {
 }
 
 .card-description {
-    font-size: 16px;
-    color: #33333399;
     margin: 0 0;
     text-align: left;
+    color: rgba(51, 51, 51, .6);
+    font-size: 16px;
+    line-height: 1.3;
+    margin-bottom: 0;
 }
 
 
 .card-describe {
     padding: 25px 25px 30px;
+    text-align: left;
 }
 
-a.primary-btn {
+.primary-btn {
     background: #f8ae1d;
     border: 1px solid #f8ae1d;
     border-radius: 100px;
@@ -661,10 +733,13 @@ a.primary-btn {
     font-weight: 600;
     margin-top: 26px;
     padding: 8px 16px;
-    text-align: center;
     transition: .2s ease-in-out;
-    position: relative;
-    right: 139px;
+}
+
+.primary-btn:hover {
+    background-color: #fff;
+    border-color: #f8ae1d;
+    color: #000;
 }
 
 /* card section end */
@@ -674,16 +749,18 @@ a.primary-btn {
 /* powerhouse section start */
 
 section.midwest-section {
-    padding: 60px 0;
+    padding: 100px 0 120px;
 }
 
 .midwest-left {
     max-width: 551px;
+    width: 551px;
+    height: 546px;
 }
 
 .midwest-heading {
     font-size: 56px;
-    max-width: 550px;
+    max-width: 615px;
     margin: 0 0 25px;
     line-height: 1.2;
     color: #263745;
@@ -691,6 +768,7 @@ section.midwest-section {
 
 .midwest-right {
     max-width: 795px;
+    height: 556px;
 }
 
 .midwest-image {
@@ -721,7 +799,7 @@ section.midwest-section {
 
 .button:hover {
     background-color: #fff;
-    border-color: #fff;
+    border-color: #f8ae1d;
     color: #000;
 }
 
@@ -815,11 +893,20 @@ section.oem-section {
     transition: .3s ease;
 }
 
+.btn.btn-primary:hover {
+    background-color: #fff;
+    border-color: #f8ae1d;
+    color: #000;
+}
+
+.arrow-span:hover {
+    background-color: #f8ae1d;
+}
 
 
 .check-icon {
     margin-right: 11px;
-    right: 605px;
+    right: 600px;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -838,6 +925,7 @@ section.oem-section {
 
 .sewn-section {
     background-color: #eff7fd;
+    padding: 100px 0px;
     color: #fff;
 }
 
@@ -847,13 +935,12 @@ section.oem-section {
 
 .sewn-head {
     display: flex;
-    padding: 100px 0 120px;
     gap: 4%;
 }
 
 .sewn-img {
-    max-width: 100%;
-    border-radius: 22px;
+    border-radius: 8px;
+    object-fit: cover;
 }
 
 .sewn-heading {
@@ -862,6 +949,12 @@ section.oem-section {
     max-width: 526px;
     margin: 0 0 22.4px;
 }
+
+.sewn-subheading {
+    width: 619.49px;
+    height: 552px;
+}
+
 .sewn-para {
     font-size: 16px;
     color: #2a455b;
@@ -901,6 +994,59 @@ section.oem-section {
     width: 105px;
 }
 
+.img-pro5 {
+    align-items: center;
+    background-color: #efefef;
+    border-radius: 50%;
+    display: flex;
+    height: 105px;
+    justify-content: center;
+    margin: 0 34.2375px 15px 34.255px;
+    width: 105px;
+}
+
+.img-pro1 {
+    align-items: center;
+    background-color: #efefef;
+    border-radius: 50%;
+    display: flex;
+    height: 105px;
+    justify-content: center;
+    margin: 0 34.2375px 15px 34.255px;
+    width: 105px;
+}
+.img-pro2 {
+    align-items: center;
+    background-color: #efefef;
+    border-radius: 50%;
+    display: flex;
+    height: 105px;
+    justify-content: center;
+    margin: 0 34.2375px 15px 34.255px;
+    width: 105px;
+}
+.img-pro3 {
+    align-items: center;
+    background-color: #efefef;
+    border-radius: 50%;
+    display: flex;
+    height: 105px;
+    justify-content: center;
+    margin: 0 34.2375px 15px 34.255px;
+    width: 105px;
+}
+
+.img-pro4 {
+    align-items: center;
+    background-color: #efefef;
+    border-radius: 50%;
+    display: flex;
+    height: 105px;
+    justify-content: center;
+    margin: 0 34.2375px 15px 34.255px;
+    width: 105px;
+}
+
 .step-para {
     text-align: center;
     font-size: 18px;
@@ -913,8 +1059,11 @@ section.oem-section {
 
 .process-steps {
     display: flex;
-    justify-content: space-between;
     margin: 50px auto 100px;
+    gap: 40px;
+    justify-content: center;
+    flex-wrap: wrap;
+        max-width: 1500px;
 }
 
 .btn.btn-primary.pry {
@@ -934,6 +1083,12 @@ section.oem-section {
     padding: 15px 43px;
     text-decoration: none;
     transition: .3s ease;
+}
+
+.process-button:hover {
+    background-color: #fff;
+    border-color: #f8ae1d;
+    color: #000;
 }
 
 /* our process section end */
@@ -964,11 +1119,13 @@ section.quote-section {
     border: 2px solid #00000000;
     border-radius: 50px;
     display: flex;
-    font-size: 18px;
+    font-size: 15.628px;
     font-weight: 700;
     padding: 15px 81px 15px 38px;
     align-items: center;
     position : relative;
+    min-width: 268px;
+    justify-content: end;
 }
 
 .quote-button:hover {
@@ -1011,7 +1168,7 @@ section.quote-section {
 .footer {
     background-color: #21394D;
     color: white;
-    padding: 80px 0;
+    padding: 100px 0 180px;
 }
 
 .footer-right {
@@ -1053,6 +1210,7 @@ section.quote-section {
     list-style: none;
     gap: 15px;
     padding: 0px;
+    margin: 0 0 22.4px;
 }
 
 .footer-numbers li{
@@ -1069,9 +1227,15 @@ section.quote-section {
     font-size: 14px;
 }
 
+.footer-list :hover {
+    color: #f8ae1d;
+}
+
+
 .footer-item {
     font-size: 14px;
 }
+
 
 .footer-lnks {
     list-style: none;
